Fix buttons, add footer

--- a/less/select2-bootstrap.less
+++ b/less/select2-bootstrap.less
@@ -14,19 +14,12 @@
 @s2bs-caret-width-large: @caret-width-large;
 @s2bs-cursor-disabled: @cursor-disabled;
 
-// @s2bs-dropdown-header-color: @dropdown-header-color;
-// @s2bs-dropdown-link-active-bg: @dropdown-link-active-bg;
-// @s2bs-dropdown-link-active-color: @dropdown-link-active-color;
-// @s2bs-dropdown-link-disabled-color: @dropdown-link-disabled-color;
-// @s2bs-dropdown-link-hover-bg: @dropdown-link-hover-bg;
-// @s2bs-dropdown-link-hover-color: @dropdown-link-hover-color;
-
-@s2bs-dropdown-header-color: @btn-default-color;
-@s2bs-dropdown-link-active-bg: @btn-primary-bg;
-@s2bs-dropdown-link-active-color: @btn-primary-color;
+@s2bs-dropdown-header-color: @dropdown-header-color;
+@s2bs-dropdown-link-active-bg: @dropdown-link-hover-bg;
+@s2bs-dropdown-link-active-color: @dropdown-link-hover-color;
 @s2bs-dropdown-link-disabled-color: @dropdown-link-disabled-color;
-@s2bs-dropdown-link-hover-bg: @btn-default-bg;
-@s2bs-dropdown-link-hover-color: @btn-default-color;
+@s2bs-dropdown-link-hover-bg: @dropdown-link-active-bg;
+@s2bs-dropdown-link-hover-color: @dropdown-link-active-color;
 
 @s2bs-font-size-base: @font-size-base;
 @s2bs-font-size-large: @font-size-large;
@@ -45,7 +38,7 @@
 @s2bs-input-bg-disabled: @input-bg-disabled;
 @s2bs-input-color: @btn-default-color;
 @s2bs-input-color-placeholder: @btn-link-disabled-color;
-@s2bs-input-border: @btn-default-border;
+@s2bs-input-border: @input-border;
 @s2bs-input-border-focus: @input-border-focus;
 @s2bs-input-border-radius: @input-border-radius;
 @s2bs-input-height-base: @input-height-base;
@@ -55,7 +48,7 @@
 // Theme-specific variables
 // -------------------------
 
-@s2bs-dropdown-arrow-color: @btn-default-border;
+@s2bs-dropdown-arrow-color: @btn-default-color;
 @s2bs-dropdown-box-shadow: 0 6px 12px rgba(0,0,0,.175);
 @s2bs-dropdown-box-shadow-above: 0px -6px 12px rgba(0,0,0,.175);
 @s2bs-clear-selection-color: @s2bs-dropdown-arrow-color;
