--- a/less/variables.less
+++ b/less/variables.less
@@ -190,7 +190,7 @@
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
 
-@btn-font-weight:                semibold;
+@btn-font-weight:                600;
 
 @btn-default-color:              @apim-tab-unsel-color;
 @btn-default-bg:                 @apim-tab-unsel-bg;
