--- a/scss/_progress.scss
+++ b/scss/_progress.scss
@@ -18,6 +18,7 @@
   line-height: $progress-height;
   color: $progress-bar-color;
   background-color: $progress-bar-bg;
+  @include box-shadow($progress-bar-box-shadow);
   @include transition($progress-bar-transition);
 }
 
