--- a/less/variables.less
+++ b/less/variables.less
@@ -114,7 +114,7 @@
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    "Open Sans", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@headings-font-weight:    600; // bold
+@headings-font-weight:    @font-family-bold-weight; // bold
 @headings-line-height:    1.1;
 @headings-color:          @apim-blue;
 
@@ -190,7 +190,7 @@
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
 
-@btn-font-weight:                600;
+@btn-font-weight:                @font-family-bold-weight;
 
 @btn-default-color:              @apim-tab-unsel-color;
 @btn-default-bg:                 @apim-tab-unsel-bg;
