Add primary class to table contextual classes

--- a/docs/_includes/css/tables.html
+++ b/docs/_includes/css/tables.html
@@ -281,7 +281,7 @@
           <td>Column content</td>
           <td>Column content</td>
         </tr>
-        <tr class="success">
+        <tr class="primary">
           <th scope="row">3</th>
           <td>Column content</td>
           <td>Column content</td>
@@ -293,7 +293,7 @@
           <td>Column content</td>
           <td>Column content</td>
         </tr>
-        <tr class="info">
+        <tr class="success">
           <th scope="row">5</th>
           <td>Column content</td>
           <td>Column content</td>
@@ -305,7 +305,7 @@
           <td>Column content</td>
           <td>Column content</td>
         </tr>
-        <tr class="warning">
+        <tr class="info">
           <th scope="row">7</th>
           <td>Column content</td>
           <td>Column content</td>
@@ -317,7 +317,7 @@
           <td>Column content</td>
           <td>Column content</td>
         </tr>
-        <tr class="danger">
+        <tr class="warning">
           <th scope="row">9</th>
           <td>Column content</td>
           <td>Column content</td>
@@ -329,8 +329,20 @@
           <td>Column content</td>
           <td>Column content</td>
         </tr>
-        <tr class="default">
+        <tr class="danger">
           <th scope="row">11</th>
+          <td>Column content</td>
+          <td>Column content</td>
+          <td>Column content</td>
+        </tr>
+        <tr>
+          <th scope="row">12</th>
+          <td>Column content</td>
+          <td>Column content</td>
+          <td>Column content</td>
+        </tr>
+        <tr class="default">
+          <th scope="row">13</th>
           <td>Column content</td>
           <td>Column content</td>
           <td>Column content</td>
@@ -342,6 +354,7 @@
 {% highlight html %}
 <!-- On rows -->
 <tr class="active">...</tr>
+<tr class="primary">...</tr>
 <tr class="success">...</tr>
 <tr class="warning">...</tr>
 <tr class="danger">...</tr>
@@ -351,6 +364,7 @@
 <!-- On cells (`td` or `th`) -->
 <tr>
   <td class="active">...</td>
+  <tr class="primary">...</tr>
   <td class="success">...</td>
   <td class="warning">...</td>
   <td class="danger">...</td>
