--- a/less/tables.less
+++ b/less/tables.less
@@ -208,6 +208,7 @@ table {
 // inheritance to nested tables.
 
 // Generate the contextual variants
+.table-row-variant(primary; @brand-navy-minus-10; @table-border-color);
 .table-row-variant(active; @table-bg-active; @table-border-color);
 .table-row-variant(success; @state-success-bg; @state-success-text);
 .table-row-variant(info; @state-info-bg; @state-info-text);
