--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -236,7 +236,10 @@ select.form-control-lg {
   }
 
   + .form-check-inline {
-    margin-left: $form-check-inline-margin-x;
+    
+    &:not(:last-child) {
+      margin-right: $form-check-inline-margin-x;
+    }
   }
 }
 
