--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -247,39 +247,63 @@ select.form-control-lg {
 
 .form-control-feedback {
   margin-top: $form-feedback-margin-top;
+
+  &::after {
+    display: block;
+    content: "";
+    opacity: 0;
+    @include transition($form-feedback-transition);
+  }
 }
 
-.form-control-success,
-.form-control-warning,
-.form-control-danger {
-  padding-right: ($input-btn-padding-x * 3);
-  background-repeat: no-repeat;
-  background-position: center right ($input-height / 4);
-  background-size: ($input-height / 2) ($input-height / 2);
+.has-success,
+.has-warning,
+.has-danger {
+  .form-control.feedback-icon {
+    padding-right: ($input-btn-padding-x * 3);
+    background-repeat: no-repeat;
+    background-position: center right ($input-height / 4);
+    background-size: ($input-height / 2) ($input-height / 2);
+  }
 }
 
 // Form validation states
 .has-success {
   @include form-control-validation($brand-success);
 
-  .form-control-success {
+  .form-control.feedback-icon {
     background-image: $form-icon-success;
+  }
+
+  .form-control-feedback::after {
+    content: attr(data-success);
+    opacity: 1;
   }
 }
 
 .has-warning {
   @include form-control-validation($brand-warning);
 
-  .form-control-warning {
+  .form-control.feedback-icon {
     background-image: $form-icon-warning;
+  }
+
+  .form-control-feedback::after {
+    content: attr(data-warning);
+    opacity: 1;
   }
 }
 
 .has-danger {
   @include form-control-validation($brand-danger);
 
-  .form-control-danger {
+  .form-control.feedback-icon {
     background-image: $form-icon-danger;
+  }
+
+  .form-control-feedback::after {
+    content: attr(data-danger);
+    opacity: 1;
   }
 }
 
