--- a/scss/_close.scss
+++ b/scss/_close.scss
@@ -25,5 +25,6 @@ button.close {
   background: transparent;
   border: 0;
   -webkit-appearance: none;
+  margin-left: auto;
 }
 // scss-lint:enable QualifyingElement
