--- a/scss/_close.scss
+++ b/scss/_close.scss
@@ -22,6 +22,7 @@
 // scss-lint:disable QualifyingElement
 button.close {
   padding: 0;
+  margin-left: auto;
   background: transparent;
   border: 0;
   -webkit-appearance: none;
