Added css + html for back to top button in nav

--- a/docs/assets/scss/_sidebar.scss
+++ b/docs/assets/scss/_sidebar.scss
@@ -105,3 +105,10 @@
   color: $gray-dark;
   background-color: transparent;
 }
+
+// Back to top button
+.bd-back-to-top {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
