Add pointer cursor on buttons
Added the pointer cursor on .btn class so that all buttons (a.btn, input.btn, button.btn) have the pointer.

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -11,6 +11,7 @@
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
+  cursor: pointer;
   border: $input-btn-border-width solid transparent;
   @include button-size($input-btn-padding-y, $input-btn-padding-x, $font-size-base, $input-btn-line-height, $btn-border-radius);
   @include transition($btn-transition);
