Fixed strong tag style in active autocomplete item
Previously strong was styled with a default color that blended with
active item background color. Not anymore.

--- a/docs/_includes/components/dropdowns.html
+++ b/docs/_includes/components/dropdowns.html
@@ -44,7 +44,7 @@
       </button>
       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+        <li class="active" role="presentation"><a role="menuitem" tabindex="-1" href="#"><strong>Another</strong> action</a></li>
         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
       </ul>
     </div>
