--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -123,6 +123,10 @@
     outline: 0;
     background-color: @dropdown-link-active-bg;
   }
+
+  strong {
+    color: inherit;
+  }
 }
 
 // Disabled state
