Apply states to all sizes on form-control

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -38,26 +38,8 @@
   }
 
   // Customize the `:focus` state to imitate native WebKit styles.
-  @include form-control-focus();
-
-  // Placeholder
-  &::placeholder {
-    color: $input-color-placeholder;
-    // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
-    opacity: 1;
-  }
-
-  // Disabled and read-only inputs
-  //
-  // HTML5 says that controls under a fieldset > legend:first-child won't be
-  // disabled if the fieldset is disabled. Due to implementation difficulty, we
-  // don't honor that edge case; we style them as disabled anyway.
-  &:disabled,
-  &[readonly] {
-    background-color: $input-bg-disabled;
-    // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655.
-    opacity: 1;
-  }
+  // Also customise `:disabled` state and placeholder style
+  @include form-control-states();
 }
 
 select.form-control {
@@ -157,6 +139,7 @@ select.form-control {
   font-size: $font-size-sm;
   line-height: $input-btn-line-height-sm;
   @include border-radius($input-border-radius-sm);
+  @include form-control-states();
 }
 
 select.form-control-sm {
@@ -171,6 +154,7 @@ select.form-control-sm {
   font-size: $font-size-lg;
   line-height: $input-btn-line-height-lg;
   @include border-radius($input-border-radius-lg);
+  @include form-control-states();
 }
 
 select.form-control-lg {
