fixes wrapping bug for buttons in section-header on iOS

--- a/scss/custom/_sections.scss
+++ b/scss/custom/_sections.scss
@@ -27,6 +27,7 @@
 .section-header {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   margin-top: $section-padding-y;
   margin-bottom: $section-padding-y;
 }
