Update Bootstrap masthead - Vertically center "B"

--- a/docs/assets/scss/_masthead.scss
+++ b/docs/assets/scss/_masthead.scss
@@ -9,6 +9,7 @@
 
   .bd-booticon {
     margin: 0 auto 2rem;
+    line-height: 8rem;
     color: $bd-purple-light;
     border-color: $bd-purple-light;
   }
