Updates to fieldsets and form columns (#105)
* update fields legend
* Fix form groups with row-equal-height grid.
* Increase package version to 5.6.3

--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -1118,11 +1118,11 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@legend-color">@legend-color</label>
-    <input id="input-@legend-color" type="text" value="@gray-dark" data-var="@legend-color" class="form-control"/>
+    <input id="input-@legend-color" type="text" value="@headings-color" data-var="@legend-color" class="form-control"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@legend-border-color">@legend-border-color</label>
-    <input id="input-@legend-border-color" type="text" value="#e5e5e5" data-var="@legend-border-color" class="form-control"/>
+    <input id="input-@legend-border-color" type="text" value="@input-border" data-var="@legend-border-color" class="form-control"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
