--- a/less/variables.less
+++ b/less/variables.less
@@ -439,8 +439,8 @@
 //** `.form-group` margin
 @form-group-margin-bottom:       24px;  // Visible space is 24px but line height(20) is 6px bigger than font size(14)
 
-@legend-color:                   @gray-dark;
-@legend-border-color:            #e5e5e5;
+@legend-color:                   @headings-color;
+@legend-border-color:            @input-border;
 
 @control-label-color:            @brand-grey-plus-10;
 @control-label-font-size:        @font-size-small;
