--- a/docs/_includes/nav-docs.html
+++ b/docs/_includes/nav-docs.html
@@ -1,6 +1,5 @@
 <form class="bd-search d-none d-sm-block">
-  <input type="search" class="form-control" id="search-input" placeholder="Search..." aria-label="Search for..." autocomplete="off">
-  <div class="dropdown-menu bd-search-results" id="search-results"></div>
+  <input type="text" class="form-control algolia__input js-algolia__input" id="bd-docs-search" autocomplete="off" name="query" placeholder="Search the docs...">
 </form>
 
 <nav class="bd-links" id="docsNavbarContent">
