--- a/docs/assets/scss/_sidebar.scss
+++ b/docs/assets/scss/_sidebar.scss
@@ -24,33 +24,18 @@
   }
 }
 
-.bd-search-results {
-  right: 0;
-  display: block;
-  padding: 0;
-  overflow: hidden;
-  font-size: .9rem;
-
-  &:empty {
-    display: none;
-  }
-
-  .dropdown-item {
-    padding-right: .75rem;
-    padding-left: .75rem;
-
-    &:first-child { margin-top: .25rem; }
-    &:last-child { margin-bottom: .25rem; }
-  }
-
-  .no-results {
-    padding: .75rem 1rem;
-    color: #7a7a7a;
-    text-align: center;
-    white-space: normal; // Undo .dropdown-item defaults
-  }
+.algolia-autocomplete .algolia-docsearch-suggestion--highlight {
+  color: #5f2dab;
+  background: rgba(154, 132, 187, .12);
 }
 
+.algolia-autocomplete .algolia-docsearch-suggestion--text .algolia-docsearch-suggestion--highlight {
+  box-shadow: inset 0 -2px 0 0 rgba(95, 45, 171, .8) !important;
+}
+
+.algolia-autocomplete .ds-suggestion.ds-cursor .algolia-docsearch-suggestion--content {
+  background-color: rgba(208, 189, 236, .12) !important;
+}
 
 .bd-sidenav {
   display: none;
