--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -37,12 +37,21 @@
 
 {% if page.layout == "docs" %}
 <script type="text/javascript" src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
-<script type="text/javascript"> docsearch({
+<script type="text/javascript">
+  var docsearch = docsearch({
     apiKey: '48cb48b22351bc71ea5f12f4d1ede198',
     indexName: 'bootstrap-v4',
     inputSelector: '#search-input',
     debug: true // Set debug to true if you want to inspect the dropdown
-});
+  });
+
+  docsearch.autocomplete.on('autocomplete:selected', function(event, suggestion) {
+      location.href = suggestion.url.replace("https://v4-alpha.getbootstrap.com", "");
+  }).on('keypress', function(event) {
+      if (event.keyCode === 13) {
+          location.href = suggestion.url.replace("https://v4-alpha.getbootstrap.com", "")
+      }
+  });
 </script>
 {% endif %}
 
