Text Truncate should truncate text on non block level elements

--- a/scss/mixins/_text-truncate.scss
+++ b/scss/mixins/_text-truncate.scss
@@ -2,6 +2,7 @@
 // Requires inline-block or block for proper styling
 
 @mixin text-truncate() {
+  display: block;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
