Add no left margin for side nav and no underline for link icons

--- a/less/column-layout.less
+++ b/less/column-layout.less
@@ -116,6 +116,7 @@
 .column-layout-main .container {
   // ensures we use the full width on default mac screen
   max-width: 1176px;
+  margin-left: 0;
 }
 
 .column-layout-brand {
