--- a/less/transferwise.less
+++ b/less/transferwise.less
@@ -200,6 +200,13 @@ li .circle {
   }
 }
 
+a.icon {
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 .icon-sm {
     font-size: 16px;
 }
