Modify caret mark behaviour wrt screen size

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -27,9 +27,17 @@
 // Just add .dropup after the standard .dropdown class and you're set.
 .dropup {
   .dropdown-toggle {
-    &::after {
-      border-top: 0;
-      border-bottom: $caret-width solid;
+    @media (max-width: 768px){
+      &::after {
+        border-top: 0;
+        border-bottom: $caret-width solid;
+      }
+    }
+    @media (min-width: 768px){
+      &::after {
+        border-top: 0;
+        border-bottom: $caret-width solid;
+      }
     }
   }
 }
