--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -641,7 +641,8 @@ $card-inverse-link-hover-color:    $white !default;
 
 $card-img-overlay-padding: 1.25rem !default;
 
-$card-deck-margin:          ($grid-gutter-width-base / 2) !default;
+$card-group-margin:         ($grid-gutter-width-base / 2) !default;
+$card-deck-margin:          $card-group-margin !default;
 
 $card-columns-count:        3 !default;
 $card-columns-gap:          1.25rem !default;
